CSS changed for create/edit news form date field alignment for issue #7762

--- a/openscholar/themes/cp_theme/css/cp_theme.css
+++ b/openscholar/themes/cp_theme/css/cp_theme.css
@@ -1176,3 +1176,7 @@ div.error:before {
   padding: 5px;
   width: 96%;
 }
+/** News edit page calendar field override */
+.node-news-form .date-padding {
+    padding: 0;
+}
